# musicflow_server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docs$(date +%Y%m%d)-播放队列功能.md
.claude/: settings.local.json
docs/: API test.md  plan.md  subsonic-api-docs-zh.md
examples/: kugou_meta.rs  simple_xml_test.rs  test_clean_serialization.rs  test_cover_art.rs  test_pinyin.rs
migrations/: 001_create_users_table.sql  002_create_artists_table.sql  003_create_albums_table.sql  004_create_songs_table.sql  005_create_playlists_table.sql  006_create_playlist_songs_table.sql  007_create_starred_table.sql  008_create_scrobbles_table.sql  009_create_ratings_table.sql  010_create_chat_messages_table.sql  011_create_videos_and_now_playing_tables.sql  012_create_play_queue_table.sql
src/: error.rs  lib.rs  main.rs  response.rs
src/config/: app_config.rs  mod.rs
src/database/: connection.rs  mod.rs
src/extractors/: format_extractor.rs  mod.rs
src/handlers/: advanced.rs  auth.rs  browsing.rs  browsing.rs.bak  library.rs  mod.rs  play_queue.rs  playlist.rs  search.rs  stream.rs  system.rs  user.rs
src/middleware/: auth_middleware.rs  mod.rs
src/models/: album.rs  artist.rs  mod.rs  playlist.rs  rating.rs  response.rs  scrobble.rs  song.rs  starred.rs  user.rs
src/services/: auth_service.rs  browsing_service.rs  context.rs  library_service.rs  mod.rs  play_queue_service.rs  playlist_service.rs  scan_service.rs  search_service.rs  song_service.rs  user_service.rs
src/utils/: auth_utils.rs  hash_utils.rs  id_builder.rs  mod.rs  (+4 more)
web/: index.html
(+86 files in other folders)
