[package]
name = "musicflow_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# 数据库 - SQLite
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }

# 音频处理
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg", "wav"] }

# 图片处理
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
webp = "0.3.0"

# 工具库
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
md5 = "0.7"
walkdir = "2.4"
rand = "0.8"
tokio-util = { version = "0.7.17", features = ["full"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
# mandarin-to-pinyin = "0.0.2"
pinyin = "0.10.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
